K8sYaml/projects/defaultproject/workloads/artifacts/republish-yaml-workload-donot-delete/republish-yaml-workload-donot-delete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  annotations:
    rafay.dev/registry-gcr: rauto-automation-gcr-registry
    rafay.dev/logging: rauto-es-ep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: gcr.io/gcp-auto-provision/hello:plain-text
        ports:
        - containerPort: 80
        volumeMounts:
          - name: coffee-persistent-storage
            mountPath: /var/logs/
      volumes:
      - name: coffee-persistent-storage
        persistentVolumeClaim:
          claimName: coffee-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  annotations:
    rafay.dev/registry-ecr: rauto-automation-ecr-registry
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: 679196758854.dkr.ecr.us-west-1.amazonaws.com/nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
 annotations:
   rafay.dev/registry-pvt-docker-hub: rauto-automation-dockerhub-registry
   rafay.dev/logging: rauto-es-ep
 name: nginx-deployment
 labels:
   app: nginx
spec:
 replicas: 1
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
     - name: nginx
       image: rafayautomation/nginx:latest
       ports:
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - automation-5855.qasimplified.com
    secretName: cafe-ingress-secret
  rules:
  - host: automation-5855.qasimplified.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
